force-app/main/default/objects/CventEvents__NominationApprover__c/fields/CventEvents__Comment__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Comment__c</fullName>
    <description>Stores the comment leaved by approver.</description>
    <inlineHelpText>Stores the comment leaved by approver.</inlineHelpText>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>