force-app/main/default/objects/CventEvents__NominationApprover__c/fields/CventEvents__GroupId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__GroupId__c</fullName>
    <description>Stores the approving Public Group Id.</description>
    <inlineHelpText>Stores the approving Public Group Id.</inlineHelpText>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>