force-app/main/default/objects/CventEvents__NominationApprover__c/fields/CventEvents__GroupName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__GroupName__c</fullName>
    <description>Stores the approving Public Group Name.</description>
    <inlineHelpText>Stores the approving Public Group Name.</inlineHelpText>
    <label>Group Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>