force-app/main/default/objects/CventEvents__NominationApprover__c/fields/CventEvents__ProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ProcessedDate__c</fullName>
    <description>Stores date when the nomination has been processed by this approver.</description>
    <inlineHelpText>Stores date when the nomination has been processed by this approver.</inlineHelpText>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>